--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,11 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
+upload_protocol = espota
+upload_port = ledrgb.local
+upload_flags =
+  --port=82
+
 board_build.filesystem = littlefs
 
 monitor_speed = 115200
