fix mdns and interface apparence

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ framework = arduino
 board = nodemcuv2
 
 upload_protocol = espota
-upload_port = ledrgb.local
+upload_port = led-faf6ea.local
 upload_flags =
   --port=82
 
