created class for rgb led strip and protocol as json

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
+upload_port = led-10c3b4.local
 upload_protocol = espota
-upload_port = led-faf6ea.local
+; upload_port = led-10bb24.local
+; upload_port = led-faf6ea.local
 upload_flags =
   --port=82
 
@@ -23,3 +25,4 @@ monitor_speed = 115200
 
 lib_deps =
   ArduinoWebsockets@0.4.18
+  ArduinoJson
