--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,12 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
+build_flags = 
+  '-D WIFI_SSID="WIFI-SSID"'
+  '-D WIFI_PASS="WIFI-PASS"'
+  '-D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH'
+  '-D PCI_VERSION_2'
+
 upload_port = led-10c3b4.local
 upload_protocol = espota
 ; upload_port = led-10bb24.local
