--- a/platformio.ini
+++ b/platformio.ini
@@ -7,28 +7,73 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[extra]
+;serial port here
+monitor_port = /dev/ttyUSB0 
+monitor_speed = 115200
+
+;serial port here
+upload_serial_port = /dev/ttyUSB0 
+upload_serial_speed = 921600
+
+;ip address or mDNS_NAME.local here
+upload_ota_ip = led-10b9d2.local 
+upload_ota_port = 82
+upload_ota_protocol = espota
+
+;Wi-Fi ssid here
+wifi_ssid = '"WIFI-SSID"' 
+;wi-fi password here
+wifi_pass = '"WIFI-PASS"' 
+
+[env]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
 build_flags = 
-  '-D WIFI_SSID="WIFI-SSID"'
-  '-D WIFI_PASS="WIFI-PASS"'
-  '-D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH'
-  '-D PCI_VERSION_2'
-
-upload_port = led-10c3b4.local
-upload_protocol = espota
-; upload_port = led-10bb24.local
-; upload_port = led-faf6ea.local
-upload_flags =
-  --port=82
+  -D WIFI_SSID=${extra.wifi_ssid}
+  -D WIFI_PASS=${extra.wifi_pass}
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
 
 board_build.filesystem = littlefs
 
-monitor_speed = 115200
+monitor_speed = ${extra.monitor_speed}
+monitor_port = ${extra.monitor_port}
 
 lib_deps =
   ArduinoWebsockets@0.4.18
   ArduinoJson
+
+[env:PCI_VERSION_2_OTA]
+build_flags = 
+	${env.build_flags}
+	-D PCI_VERSION_2
+upload_port = ${extra.upload_ota_ip}
+upload_protocol = ${extra.upload_ota_protocol}
+upload_flags =
+  --port=${extra.upload_ota_port}
+
+[env:PCI_VERSION_1_OTA]
+build_flags = 
+	${env.build_flags}
+	-D PCI_VERSION_1
+upload_port = ${extra.upload_ota_ip}
+upload_protocol = ${extra.upload_ota_protocol}
+upload_flags =
+  --port=${extra.upload_ota_port}
+
+[env:PCI_VERSION_2_SERIAL_PORT]
+build_flags = 
+	${env.build_flags}
+	-D PCI_VERSION_2
+upload_speed = ${extra.upload_serial_speed}
+upload_port = ${extra.upload_serial_port}
+
+[env:PCI_VERSION_1_SERIAL_PORT]
+build_flags = 
+	${env.build_flags}
+	-D PCI_VERSION_1
+upload_speed = ${extra.upload_serial_speed}
+upload_port = ${extra.upload_serial_port}
+
