Adicionado versão de lib_deps e platform para manter compatibilidade com atualização futuras

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,23 +1,24 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
-[extra]
+[config]
 ;serial port here
-monitor_port = /dev/ttyUSB0 
+monitor_port = /dev/ttyUSB0 ; COM3
 monitor_speed = 115200
 
 ;serial port here
-upload_serial_port = /dev/ttyUSB0 
+upload_serial_port = /dev/ttyUSB0 ; COM3
 upload_serial_speed = 921600
 
 ;ip address or mDNS_NAME.local here
-upload_ota_ip = led-10b9d2.local 
+upload_ota_ip = led-faf6ea.local 
 upload_ota_port = 82
 upload_ota_protocol = espota
 
@@ -27,53 +28,48 @@ wifi_ssid = '"WIFI-SSID"'
 wifi_pass = '"WIFI-PASS"' 
 
 [env]
-platform = espressif8266
+; https://github.com/platformio/platform-espressif8266/releases
+platform = espressif8266@2.6.2 
 framework = arduino
 board = nodemcuv2
-
 build_flags = 
-  -D WIFI_SSID=${extra.wifi_ssid}
-  -D WIFI_PASS=${extra.wifi_pass}
+  -D WIFI_SSID=${config.wifi_ssid}
+  -D WIFI_PASS=${config.wifi_pass}
   -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
-
 board_build.filesystem = littlefs
-
-monitor_speed = ${extra.monitor_speed}
-monitor_port = ${extra.monitor_port}
-
-lib_deps =
-  ArduinoWebsockets@0.4.18
-  ArduinoJson
+monitor_speed = ${config.monitor_speed}
+monitor_port = ${config.monitor_port}
+lib_deps = 
+  ArduinoWebsockets@0.5.3
+  ArduinoJson@6.19.4
 
 [env:PCI_VERSION_2_OTA]
 build_flags = 
 	${env.build_flags}
 	-D PCI_VERSION_2
-upload_port = ${extra.upload_ota_ip}
-upload_protocol = ${extra.upload_ota_protocol}
-upload_flags =
-  --port=${extra.upload_ota_port}
+upload_port = ${config.upload_ota_ip}
+upload_protocol = ${config.upload_ota_protocol}
+upload_flags = --port=${config.upload_ota_port}
 
 [env:PCI_VERSION_1_OTA]
 build_flags = 
 	${env.build_flags}
 	-D PCI_VERSION_1
-upload_port = ${extra.upload_ota_ip}
-upload_protocol = ${extra.upload_ota_protocol}
-upload_flags =
-  --port=${extra.upload_ota_port}
+upload_port = ${config.upload_ota_ip}
+upload_protocol = ${config.upload_ota_protocol}
+upload_flags = --port=${config.upload_ota_port}
 
 [env:PCI_VERSION_2_SERIAL_PORT]
 build_flags = 
 	${env.build_flags}
 	-D PCI_VERSION_2
-upload_speed = ${extra.upload_serial_speed}
-upload_port = ${extra.upload_serial_port}
+upload_speed = ${config.upload_serial_speed}
+upload_port = ${config.upload_serial_port}
 
 [env:PCI_VERSION_1_SERIAL_PORT]
 build_flags = 
 	${env.build_flags}
 	-D PCI_VERSION_1
-upload_speed = ${extra.upload_serial_speed}
-upload_port = ${extra.upload_serial_port}
+upload_speed = ${config.upload_serial_speed}
+upload_port = ${config.upload_serial_port}
 
